<resources>
    <string name="app_name">nav2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_anti">Anti</string>
    <string name="title_doctor">Doctor</string>
    <string name="title_follow">Follow</string>
    <string name="title_set">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>