<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/huidr_sel"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_anti"
        android:icon="@drawable/anti_sel"
        android:title="@string/title_anti" />

    <item
        android:id="@+id/navigation_doctor"
        android:icon="@drawable/doctor_sel"
        android:title="@string/title_doctor" />

    <item
        android:id="@+id/navigation_follow"
        android:icon="@drawable/follow_sel"
        android:title="@string/title_follow"/>

    <item
        android:id="@+id/navigation_set"
        android:icon="@drawable/mine_sel"
        android:title="@string/title_set"/>



</menu>