<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.nav2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_anti"
        android:name="com.example.nav2.ui.anti.AntiFragment"
        android:label="@string/title_anti"
        tools:layout="@layout/fragment_anti" />

    <fragment
        android:id="@+id/navigation_doctor"
        android:name="com.example.nav2.ui.doctor.DoctorFragment"
        android:label="@string/title_doctor"
        tools:layout="@layout/fragment_doctor" />
    <fragment
        android:id="@+id/navigation_follow"
        android:name="com.example.nav2.ui.follow.FollowFragment"
        android:label="@string/title_follow"
        tools:layout="@layout/fragment_follow" />
    <fragment
        android:id="@+id/navigation_set"
        android:name="com.example.nav2.ui.set.SettingFragment"
        android:label="@string/title_set"
        tools:layout="@layout/fragment_setting" />


</navigation>